Bug 49486 - Hyphenation problem with Graphite 2
Summary: Hyphenation problem with Graphite 2
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
3.5.3 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:3.7.0 target:3.6.0.1 target:3.5.6
Keywords: regression
Depends on:
Blocks:
 
Reported: 2012-05-04 06:32 UTC by László Németh
Modified: 2012-07-05 14:33 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments
proposed fix for hyphenation problem (841 bytes, patch)
2012-05-07 02:45 UTC, martin_hosken
Details

Note You need to log in before you can comment on or make changes to this bug.
Description László Németh 2012-05-04 06:32:42 UTC
Newly introduced problem with Graphite 2. Maybe calculation problem of text width result missing hyphenation points with automatic hyphenation: bad looking, loose text with big spaces prevents typesetting with Graphite fonts.

More information with test files:

Issue 36703 and http://sourceforge.net/tracker/?func=detail&aid=3425291&group_id=66144&atid=513479
Comment 1 László Németh 2012-05-04 06:35:10 UTC
Bug 49486
Comment 2 László Németh 2012-05-04 06:36:47 UTC
See Bug 36703
Comment 3 gleppert 2012-05-04 10:39:10 UTC
Thanks for creating this bug. Indeed, hyphenation is a problem. I replicated what Axel did in Bug 36703 and I have the same problem.

Hyphenation is perfectly working with font "Times New Roman", but not correctly with "Linux Libertine G": Short words like "ihren", "Hunden", "wäre" are not hyphenated at all. Longer words like "Niederschlag" hyphenate only partly, e.g. "Nieder-schlag", but never "Nie-derschlag" which would be also correct. Using a non-SIL fonts solves the problems.


System: LO 3.5.3 Ubuntu PPA, Ubuntu 11.10 64-bit, German locale.
Comment 4 martin_hosken 2012-05-07 02:45:03 UTC
Created attachment 61120 [details]
proposed fix for hyphenation problem

This fix is untested due to not being able to get make dev-install to handle dictionaries so can't test hyphenation.
Comment 5 Michael Stahl 2012-07-05 14:18:37 UTC
thanks for the patch, it does seem to fix the problem here.

from the description it seems this is a regression.

btw you can just start the dev-install soffice and then use the
extension manager to install the dictionaries in solver/$INPATH/pck/dict*.oxt
Comment 6 Not Assigned 2012-07-05 14:20:26 UTC
Martin Hosken committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b25385a671ed43580a360570981ac1d52446a615

fdo#49486: fix graphite2 hyphenation regression
Comment 7 Not Assigned 2012-07-05 14:26:47 UTC
Martin Hosken committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a0c5a0b7ece71c849d714a03cdc74362cff7c2e0&g=libreoffice-3-6

fdo#49486: fix graphite2 hyphenation regression


It will be available in LibreOffice 3.6.
Comment 8 Not Assigned 2012-07-05 14:33:27 UTC
Martin Hosken committed a patch related to this issue.
It has been pushed to "libreoffice-3-5":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e30425b674034824bff78d40192776eee1bc23cd&g=libreoffice-3-5

fdo#49486: fix graphite2 hyphenation regression


It will be available in LibreOffice 3.5.6.