fdo#49486: fix graphite2 hyphenation regression

Change-Id: I6d5901f28b66c8edc0c16e7ec04d574a5d59dedc
(cherry picked from commit b25385a671ed43580a360570981ac1d52446a615)